[gd_scene load_steps=9 format=2]

[ext_resource path="res://Wall/Wall.tscn" type="PackedScene" id=1]
[ext_resource path="res://MusicAPI.gd" type="Script" id=2]
[ext_resource path="res://MusicViz.gd" type="Script" id=3]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=4]

[sub_resource type="AudioStreamMicrophone" id=1]

[sub_resource type="ParticlesMaterial" id=2]
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 100, 40, 0.125 )
flag_align_y = true
direction = Vector3( 0, 0, 1 )
spread = 22.76
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )
size = Vector3( 0.117, 0.121, 0.158 )

[node name="MusicViz" type="Spatial" groups=[
"MusicViz",
]]
script = ExtResource( 3 )

[node name="FreqBars" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 73, 0, -10 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 100, 8, 0 )
current = true
fov = 115.7
size = 20.0
far = 400.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )
autoplay = true

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="WallL" parent="." instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 100, -150 )

[node name="WallR" parent="." instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 200, 100, -150 )

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 100, 10, -30 )
amount = 5000
lifetime = 6.0
local_coords = false
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 4 )

[node name="MusicAPI" type="Node" parent="." groups=[
"MusicAPI",
]]
script = ExtResource( 2 )

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="stop_stream" from="MusicAPI" to="." method="_on_MusicAPI_stop_stream"]
[connection signal="stream_ready" from="MusicAPI" to="." method="_musicapi_stream_ready"]
